src/objects/Settings__c.object
<CustomObject>
    <description>Holds the configuration details for rendering the fields on the dynamic Visualforce page.</description>
    <fields>
        <fullName>Child_Display_Name__c</fullName>
        <description>This is to display the label of the section header at page level for  the child object</description>
        <label>Child Display Name</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Fieldset_Name__c</fullName>
        <inlineHelpText>Name of the Fieldset created for the Child Sobject.</inlineHelpText>
        <label>Child Fieldset Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Section_Title__c</fullName>
        <inlineHelpText>Text to display on the Child Section Summary when the page is rendered.</inlineHelpText>
        <label>Child Section Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Sobject_Name__c</fullName>
        <inlineHelpText>Name of the Child Sobject whose records need to be displayed in the Parent Section Summary.</inlineHelpText>
        <label>Child Sobject Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>Parent_Sobject_Name__c +&apos;_&apos;+ Child_Sobject_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Parent and Child object’s API names</inlineHelpText>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Child_Records_Title__c</fullName>
        <inlineHelpText>Text to display on the Existing Child Section Summary when the page is rendered.</inlineHelpText>
        <label>Existing Child Section Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Include_Csv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provide CSV Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Fieldset_Name__c</fullName>
        <inlineHelpText>Name of the Fieldset created for the Parent Sobject.</inlineHelpText>
        <label>Parent Fieldset Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Section_Title__c</fullName>
        <inlineHelpText>Text to display on the Parent Section Summary when the page is rendered.</inlineHelpText>
        <label>Parent Section Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Sobject_Name__c</fullName>
        <inlineHelpText>Name of the Parent Sobject whose records need to be displayed in the Parent Section Summary.</inlineHelpText>
        <label>Parent Sobject Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Field_API_Name__c</fullName>
        <inlineHelpText>Api Name of the field in the child Sobject  which is a lookup to the parent sObject</inlineHelpText>
        <label>Related Field API Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Bulk Entry Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SET-{MM}{DD}{YY}{000000}</displayFormat>
        <label>Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Entry Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>